fix(portal/mail): Delete useless scrollbar

--- a/skins/mel_elastic/styles/less/style.less
+++ b/skins/mel_elastic/styles/less/style.less
@@ -4420,6 +4420,12 @@ a.rcmContactAddress {
     }
 }
 
+.module_Mails {
+    .melv2-card-contents {
+        &:extend(.module_Headlines .melv2-card-contents);
+    }
+}
+
 .melv2-color {
     --mv2-item-background-color:#F8F9FA;
     --mv2-item-text-color: var(--main-text-color);
